fix: improve color contrast in footer (>4.5 AA)

--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ html {
   --padding-size-5: 8px;
 
   --palette-darkgray: rgb(29, 29, 29);
-  --palette-stencil: #0891b2;
+  --palette-stencil: #007c9b;
 }
 
 body {
